get the file pinning working
